# Hibernator

./: .gitignore  CMakeLists.txt  README.md
src/: hibernator.h  icon.h  main.c  notifyicon.h  screenshoter.h  settings.h
